- Merge dhcrelay6 into dhcrelay - Prep for 4.1.0a2 release

--- a/relay/Makefile.am
+++ b/relay/Makefile.am
@@ -2,7 +2,7 @@ AM_CPPFLAGS = -DLOCALSTATEDIR='"@localstatedir@"'
 
 sbin_PROGRAMS = dhcrelay
 dhcrelay_SOURCES = dhcrelay.c
-dhcrelay_LDADD = ../common/libdhcp.a ../omapip/libomapi.a ../dst/libdst.a
+dhcrelay_LDADD = ../common/libdhcp.a ../omapip/libomapi.a ../dst/libdst.a ../minires/libres.a
 man_MANS = dhcrelay.8
 EXTRA_DIST = $(man_MANS)
 
