--- a/includes/config.h.in
+++ b/includes/config.h.in
@@ -88,7 +88,7 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* The size of a `struct iaddr *', as computed by sizeof. */
+/* The size of `struct iaddr *', as computed by sizeof. */
 #undef SIZEOF_STRUCT_IADDR_P
 
 /* Define to 1 if you have the ANSI C header files. */
