Add scripts/macos to build.

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -1,8 +1,9 @@
 dist_sysconf_DATA = dhclient.conf
 sbin_PROGRAMS = dhclient
 dhclient_SOURCES = clparse.c dhclient.c dhc6.c \
-		   scripts/bsdos scripts/freebsd scripts/linux scripts/netbsd \
-		   scripts/nextstep scripts/openbsd scripts/solaris
+		   scripts/bsdos scripts/freebsd scripts/linux scripts/macos \
+		   scripts/netbsd scripts/nextstep scripts/openbsd \
+		   scripts/solaris
 dhclient_LDADD = ../common/libdhcp.a ../minires/libres.a \
 		 ../omapip/libomapi.a ../dst/libdst.a
 man_MANS = dhclient.8 dhclient-script.8 dhclient.conf.5 dhclient.leases.5
