--- a/client/Makefile.in
+++ b/client/Makefile.in
@@ -156,8 +156,9 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 dist_sysconf_DATA = dhclient.conf
 dhclient_SOURCES = clparse.c dhclient.c dhc6.c \
-		   scripts/bsdos scripts/freebsd scripts/linux scripts/netbsd \
-		   scripts/nextstep scripts/openbsd scripts/solaris
+		   scripts/bsdos scripts/freebsd scripts/linux scripts/macos \
+		   scripts/netbsd scripts/nextstep scripts/openbsd \
+		   scripts/solaris
 
 dhclient_LDADD = ../common/libdhcp.a ../minires/libres.a \
 		 ../omapip/libomapi.a ../dst/libdst.a
