--- a/includes/config.h.in
+++ b/includes/config.h.in
@@ -22,6 +22,9 @@
 /* Define to include Failover Protocol support. */
 #undef FAILOVER_PROTOCOL
 
+/* Define to 1 if you need the _GNU_SOURCE flag defined */
+#undef _GNU_SOURCE
+
 /* Define to 1 if you have the /dev/random file. */
 #undef HAVE_DEV_RANDOM
 
