--- a/includes/config.h.in
+++ b/includes/config.h.in
@@ -127,6 +127,14 @@
 /* Version number of package */
 #undef VERSION
 
+/* Define WORDS_BIGENDIAN to 1 if your processor stores words with the most
+   significant byte first (like Motorola and SPARC, unlike Intel and VAX). */
+#if defined __BIG_ENDIAN__
+# define WORDS_BIGENDIAN 1
+#elif ! defined __LITTLE_ENDIAN__
+# undef WORDS_BIGENDIAN
+#endif
+
 /* File for dhclient6 leases. */
 #undef _PATH_DHCLIENT6_DB
 
