- Added a configuration function, 'gethostname()', which calls the system   function of the same name and presents the results as a data expression.   This function can be used to incorporate the system level hostname of   the system the DHCP software is operating on in responses or queries (such   as including a failover partner's hostname in a dhcp message or binding   scope, or having a DHCP client send any system hostname in the host-name or   FQDN options by default).  [ISC-Bugs #17351]

--- a/client/dhclient.conf
+++ b/client/dhclient.conf
@@ -1,4 +1,4 @@
-send host-name "andare.fugue.com";
+send host-name = pick-first-value(gethostname(), "ISC-dhclient");
 send dhcp-client-identifier 1:0:a0:24:ab:fb:9c;
 send dhcp-lease-time 3600;
 supersede domain-name "fugue.com home.vix.com";
