--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -3,9 +3,9 @@ AM_CPPFLAGS = -I.. -DLOCALSTATEDIR='"@localstatedir@"'
 noinst_LIBRARIES = libdhcp.a
 libdhcp_a_SOURCES = alloc.c bpf.c comapi.c conflex.c ctrace.c discover.c \
 		    dispatch.c dlpi.c dns.c ethernet.c execute.c fddi.c \
-		    icmp.c inet.c lpf.c memory.c nit.c options.c packet.c \
-		    parse.c print.c raw.c resolv.c socket.c tables.c tr.c \
-		    tree.c upf.c heap.c
+		    icmp.c inet.c lpf.c memory.c nit.c ns_name.c options.c \
+		    packet.c parse.c print.c raw.c resolv.c socket.c \
+		    tables.c tr.c tree.c upf.c
 man_MANS = dhcp-eval.5 dhcp-options.5
 EXTRA_DIST = $(man_MANS)
 
