--- a/client/Makefile.in
+++ b/client/Makefile.in
@@ -53,8 +53,8 @@ PROGRAMS = $(sbin_PROGRAMS)
 am_dhclient_OBJECTS = clparse.$(OBJEXT) dhclient.$(OBJEXT) \
 	dhc6.$(OBJEXT)
 dhclient_OBJECTS = $(am_dhclient_OBJECTS)
-dhclient_DEPENDENCIES = ../common/libdhcp.a ../minires/libres.a \
-	../omapip/libomapi.a ../dst/libdst.a
+dhclient_DEPENDENCIES = ../common/libdhcp.a ../omapip/libomapi.a \
+	../bind/lib/libdns.a ../bind/lib/libisc.a
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)/includes
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -166,8 +166,8 @@ dhclient_SOURCES = clparse.c dhclient.c dhc6.c \
 		   scripts/netbsd scripts/nextstep scripts/openbsd \
 		   scripts/solaris scripts/openwrt
 
-dhclient_LDADD = ../common/libdhcp.a ../minires/libres.a \
-		 ../omapip/libomapi.a ../dst/libdst.a
+dhclient_LDADD = ../common/libdhcp.a ../omapip/libomapi.a \
+		 ../bind/lib/libdns.a ../bind/lib/libisc.a
 
 man_MANS = dhclient.8 dhclient-script.8 dhclient.conf.5 dhclient.leases.5
 EXTRA_DIST = $(man_MANS)
