--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -46,8 +46,8 @@ CONFIG_CLEAN_FILES =
 am_test_alloc_OBJECTS = test_alloc.$(OBJEXT)
 test_alloc_OBJECTS = $(am_test_alloc_OBJECTS)
 test_alloc_DEPENDENCIES = ../libdhcp.a ../../tests/libt_api.a \
-	../../omapip/libomapi.a ../../dst/libdst.a \
-	../../minires/libres.a
+	../../omapip/libomapi.a ../../bind/lib/libdns.a \
+	../../bind/lib/libisc.a
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)/includes
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -145,7 +145,8 @@ AM_CPPFLAGS = -I../..
 TESTS = test_alloc
 test_alloc_SOURCES = test_alloc.c
 test_alloc_LDADD = ../libdhcp.a ../../tests/libt_api.a \
-	../../omapip/libomapi.a ../../dst/libdst.a ../../minires/libres.a
+	../../omapip/libomapi.a ../../bind/lib/libdns.a \
+        ../../bind/lib/libisc.a
 
 all: all-am
 
