--- a/includes/Makefile.in
+++ b/includes/Makefile.in
@@ -141,17 +141,11 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 nobase_include_HEADERS = omapip/alloc.h omapip/buffer.h omapip/convert.h \
 			 omapip/hash.h omapip/omapip.h omapip/omapip_p.h \
-			 omapip/trace.h \
-			 isc-dhcp/boolean.h isc-dhcp/formatcheck.h \
-			 isc-dhcp/lang.h isc-dhcp/mem.h isc-dhcp/result.h \
-			 isc-dhcp/types.h isc-dhcp/commandline.h \
-			 isc-dhcp/dst.h isc-dhcp/int.h isc-dhcp/list.h \
-			 isc-dhcp/print.h isc-dhcp/string.h
+			 omapip/trace.h
 
 EXTRA_DIST = cdefs.h ctrace.h dhcp.h dhcp6.h dhcpd.h dhctoken.h failover.h \
 	     heap.h inet.h osdep.h site.h statement.h tree.h t_api.h \
 	     arpa/nameser.h arpa/nameser_compat.h \
-	     minires/minires.h minires/res_update.h minires/resolv.h \
 	     netinet/if_ether.h netinet/ip.h netinet/ip_icmp.h netinet/udp.h
 
 all: config.h
@@ -274,7 +268,7 @@ distclean-tags:
 	-rm -f TAGS ID GTAGS GRTAGS GSYMS GPATH tags
 
 distdir: $(DISTFILES)
-	$(mkdir_p) $(distdir)/arpa $(distdir)/isc-dhcp $(distdir)/minires $(distdir)/netinet $(distdir)/omapip
+	$(mkdir_p) $(distdir)/arpa $(distdir)/netinet $(distdir)/omapip
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
