--- a/omapip/Makefile.in
+++ b/omapip/Makefile.in
@@ -65,12 +65,13 @@ am_libomapi_a_OBJECTS = protocol.$(OBJEXT) buffer.$(OBJEXT) \
 	message.$(OBJEXT) convert.$(OBJEXT) hash.$(OBJEXT) \
 	auth.$(OBJEXT) inet_addr.$(OBJEXT) array.$(OBJEXT) \
 	trace.$(OBJEXT) mrtrace.$(OBJEXT) toisc.$(OBJEXT) \
-	iscprint.$(OBJEXT)
+	iscprint.$(OBJEXT) isclib.$(OBJEXT)
 libomapi_a_OBJECTS = $(am_libomapi_a_OBJECTS)
 PROGRAMS = $(noinst_PROGRAMS)
 am_svtest_OBJECTS = test.$(OBJEXT)
 svtest_OBJECTS = $(am_svtest_OBJECTS)
-svtest_DEPENDENCIES = libomapi.a ../dst/libdst.a
+svtest_DEPENDENCIES = libomapi.a ../bind/lib/libdns.a \
+	../bind/lib/libisc.a
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)/includes
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -171,12 +172,12 @@ lib_LIBRARIES = libomapi.a
 libomapi_a_SOURCES = protocol.c buffer.c alloc.c result.c connection.c \
 		     errwarn.c listener.c dispatch.c generic.c support.c \
 		     handle.c message.c convert.c hash.c auth.c inet_addr.c \
-		     array.c trace.c mrtrace.c toisc.c iscprint.c
+		     array.c trace.c mrtrace.c toisc.c iscprint.c isclib.c
 
 man_MANS = omapi.3
 EXTRA_DIST = $(man_MANS)
 svtest_SOURCES = test.c
-svtest_LDADD = libomapi.a ../dst/libdst.a
+svtest_LDADD = libomapi.a ../bind/lib/libdns.a ../bind/lib/libisc.a
 all: all-am
 
 .SUFFIXES:
@@ -268,6 +269,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/handle.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hash.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/inet_addr.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/isclib.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/iscprint.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/listener.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/message.Po@am__quote@
