--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -57,8 +57,8 @@ am_dhcpd_OBJECTS = dhcpd.$(OBJEXT) dhcp.$(OBJEXT) bootp.$(OBJEXT) \
 	dhcpleasequery.$(OBJEXT) dhcpv6.$(OBJEXT) mdb6.$(OBJEXT)
 dhcpd_OBJECTS = $(am_dhcpd_OBJECTS)
 dhcpd_DEPENDENCIES = ../common/libdhcp.a ../omapip/libomapi.a \
-	../dst/libdst.a ../dhcpctl/libdhcpctl.a ../minires/libres.a \
-	../omapip/libomapi.a
+	../dhcpctl/libdhcpctl.a ../omapip/libomapi.a \
+	../bind/lib/libdns.a ../bind/lib/libisc.a
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)/includes
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -172,9 +172,9 @@ dhcpd_SOURCES = dhcpd.c dhcp.c bootp.c confpars.c db.c class.c failover.c \
 
 
 # libomapi.a this is here twice to handle circular library dependencies :(
-dhcpd_LDADD = ../common/libdhcp.a ../omapip/libomapi.a ../dst/libdst.a \
-	      ../dhcpctl/libdhcpctl.a ../minires/libres.a \
-	      ../omapip/libomapi.a
+dhcpd_LDADD = ../common/libdhcp.a ../omapip/libomapi.a \
+	      ../dhcpctl/libdhcpctl.a ../omapip/libomapi.a \
+	      ../bind/lib/libdns.a ../bind/lib/libisc.a
 
 man_MANS = dhcpd.8 dhcpd.conf.5 dhcpd.leases.5
 EXTRA_DIST = $(man_MANS)
