--- a/includes/Makefile.in
+++ b/includes/Makefile.in
@@ -140,11 +140,13 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 nobase_include_HEADERS = omapip/alloc.h omapip/buffer.h omapip/convert.h \
-			 omapip/hash.h omapip/omapip.h omapip/omapip_p.h \
-			 omapip/trace.h
+			 omapip/hash.h omapip/isclib.h omapip/omapip.h \
+			 omapip/omapip_p.h omapip/result.h omapip/trace.h \
+			 isc-dhcp/dst.h
 
 EXTRA_DIST = cdefs.h ctrace.h dhcp.h dhcp6.h dhcpd.h dhctoken.h failover.h \
-	     heap.h inet.h osdep.h site.h statement.h tree.h t_api.h \
+	     heap.h inet.h minires.h osdep.h site.h statement.h tree.h \
+	     t_api.h \
 	     arpa/nameser.h arpa/nameser_compat.h \
 	     netinet/if_ether.h netinet/ip.h netinet/ip_icmp.h netinet/udp.h
 
@@ -268,7 +270,7 @@ distclean-tags:
 	-rm -f TAGS ID GTAGS GRTAGS GSYMS GPATH tags
 
 distdir: $(DISTFILES)
-	$(mkdir_p) $(distdir)/arpa $(distdir)/netinet $(distdir)/omapip
+	$(mkdir_p) $(distdir)/arpa $(distdir)/isc-dhcp $(distdir)/netinet $(distdir)/omapip
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
