--- a/Makefile.in
+++ b/Makefile.in
@@ -174,10 +174,10 @@ EXTRA_DIST = RELNOTES LICENSE \
 	     doc/ja_JP.eucJP/dhclient.conf.5 doc/ja_JP.eucJP/dhclient.leases.5 \
 	     doc/ja_JP.eucJP/dhcp-eval.5 doc/ja_JP.eucJP/dhcp-options.5 \
 	     doc/examples/dhclient-dhcpv6.conf doc/examples/dhcpd-dhcpv6.conf \
-	     util/bind.sh util/bindlib.sh util/bindcus.sh \
-	     bind/bind.tar.gz bind/version.tmp 
+	     util/bindvar.sh \
+	     bind/Makefile bind/bind.tar.gz bind/version.tmp 
 
-SUBDIRS = includes tests common dst omapip client dhcpctl relay server
+SUBDIRS = bind includes tests common dst omapip client dhcpctl relay server
 nobase_include_HEADERS = dhcpctl/dhcpctl.h
 all: all-recursive
 
