fix 'make check'

--- a/util/Makefile.bind
+++ b/util/Makefile.bind
@@ -13,7 +13,7 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: Makefile.bind,v 1.2.2.2 2009/12/02 23:52:29 sar Exp $
+# $Id: Makefile.bind,v 1.2.2.3 2009/12/04 22:27:45 dhankins Exp $
 
 # Configure and build the bind libraries for use by DHCP
 
@@ -70,3 +70,6 @@ distdir:
 disclean:
 
 install:
+
+check:
+
