--- a/omapip/Makefile.am
+++ b/omapip/Makefile.am
@@ -4,7 +4,7 @@ noinst_PROGRAMS = svtest
 libomapi_a_SOURCES = protocol.c buffer.c alloc.c result.c connection.c \
 		     errwarn.c listener.c dispatch.c generic.c support.c \
 		     handle.c message.c convert.c hash.c auth.c inet_addr.c \
-		     array.c trace.c mrtrace.c toisc.c iscprint.c isclib.c
+		     array.c trace.c toisc.c iscprint.c isclib.c
 
 man_MANS = omapi.3
 EXTRA_DIST = $(man_MANS)
