--- a/omapip/Makefile.in
+++ b/omapip/Makefile.in
@@ -64,8 +64,8 @@ am_libomapi_a_OBJECTS = protocol.$(OBJEXT) buffer.$(OBJEXT) \
 	generic.$(OBJEXT) support.$(OBJEXT) handle.$(OBJEXT) \
 	message.$(OBJEXT) convert.$(OBJEXT) hash.$(OBJEXT) \
 	auth.$(OBJEXT) inet_addr.$(OBJEXT) array.$(OBJEXT) \
-	trace.$(OBJEXT) mrtrace.$(OBJEXT) toisc.$(OBJEXT) \
-	iscprint.$(OBJEXT) isclib.$(OBJEXT)
+	trace.$(OBJEXT) toisc.$(OBJEXT) iscprint.$(OBJEXT) \
+	isclib.$(OBJEXT)
 libomapi_a_OBJECTS = $(am_libomapi_a_OBJECTS)
 PROGRAMS = $(noinst_PROGRAMS)
 am_svtest_OBJECTS = test.$(OBJEXT)
@@ -172,7 +172,7 @@ lib_LIBRARIES = libomapi.a
 libomapi_a_SOURCES = protocol.c buffer.c alloc.c result.c connection.c \
 		     errwarn.c listener.c dispatch.c generic.c support.c \
 		     handle.c message.c convert.c hash.c auth.c inet_addr.c \
-		     array.c trace.c mrtrace.c toisc.c iscprint.c isclib.c
+		     array.c trace.c toisc.c iscprint.c isclib.c
 
 man_MANS = omapi.3
 EXTRA_DIST = $(man_MANS)
@@ -273,7 +273,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/iscprint.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/listener.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/message.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mrtrace.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/protocol.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/result.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/support.Po@am__quote@
