--- a/util/Makefile.bind
+++ b/util/Makefile.bind
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2009  Internet Systems Consortium, Inc. ("ISC")
+# Copyright (C) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
 #
 # Permission to use, copy, modify, and/or distribute this software for any
 # purpose with or without fee is hereby granted, provided that the above
@@ -13,7 +13,7 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: Makefile.bind,v 1.2.2.3 2009/12/04 22:27:45 dhankins Exp $
+# $Id: Makefile.bind,v 1.2.2.4 2010/02/17 20:33:56 dhankins Exp $
 
 # Configure and build the bind libraries for use by DHCP
 
