--- a/includes/Makefile.in
+++ b/includes/Makefile.in
@@ -140,6 +140,7 @@ sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 nobase_include_HEADERS = omapip/alloc.h omapip/buffer.h omapip/convert.h \
