--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -142,6 +142,7 @@ sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 EXTRA_DIST = failover/dhcp-1.cf failover/dhcp-2.cf failover/new-failover \
