--- a/client/Makefile.in
+++ b/client/Makefile.in
@@ -161,6 +161,7 @@ sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 dist_sysconf_DATA = dhclient.conf
