--- a/dst/Makefile.in
+++ b/dst/Makefile.in
@@ -154,6 +154,7 @@ sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -DMINIRES_LIB -DHMAC_MD5
