--- a/client/dhclient.conf
+++ b/client/dhclient.conf
@@ -1,7 +1,7 @@
 send host-name "andare.fugue.com";
 send dhcp-client-identifier 1:0:a0:24:ab:fb:9c;
 send dhcp-lease-time 3600;
-supersede domain-name "fugue.com home.vix.com";
+supersede domain-search "fugue.com", "home.vix.com";
 prepend domain-name-servers 127.0.0.1;
 request subnet-mask, broadcast-address, time-offset, routers,
 	domain-name, domain-name-servers, host-name;
