--- a/util/Makefile.bind
+++ b/util/Makefile.bind
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2009-2010  Internet Systems Consortium, Inc. ("ISC")
+# Copyright (C) 2009-2011  Internet Systems Consortium, Inc. ("ISC")
 #
 # Permission to use, copy, modify, and/or distribute this software for any
 # purpose with or without fee is hereby granted, provided that the above
@@ -13,7 +13,7 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: Makefile.bind,v 1.5 2010/12/30 22:35:48 sar Exp $
+# $Id: Makefile.bind,v 1.6 2011/02/11 22:48:20 sar Exp $
 
 # Configure and build the bind libraries for use by DHCP
 
@@ -67,7 +67,7 @@ clean:
 
 distdir:
 
-disclean:
+distclean:
 
 install:
 
