Fix typo disclean => distclean

--- a/util/Makefile.bind
+++ b/util/Makefile.bind
@@ -13,7 +13,7 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: Makefile.bind,v 1.2.2.5 2010/12/30 22:43:33 sar Exp $
+# $Id: Makefile.bind,v 1.2.2.6 2011/02/11 22:49:31 sar Exp $
 
 # Configure and build the bind libraries for use by DHCP
 
@@ -67,7 +67,7 @@ clean:
 
 distdir:
 
-disclean:
+distclean:
 
 install:
 
