--- a/util/Makefile.bind
+++ b/util/Makefile.bind
@@ -13,7 +13,7 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: Makefile.bind,v 1.6 2011/02/11 22:48:20 sar Exp $
+# $Id: Makefile.bind,v 1.7 2011/04/06 00:41:10 marka Exp $
 
 # Configure and build the bind libraries for use by DHCP
 
@@ -45,7 +45,7 @@ all:
 # Currently disable the epoll and devpoll options as they don't interact
 # well with the DHCP code.
 	@echo Configuring BIND Export libraries for DHCP.
-	@(cd ${bindsrcdir} && ./configure --disable-kqueue --disable-epoll --disable-devpoll --without-openssl --without-libxml2 --enable-exportlib --enable-threads=no --with-export-includedir=${binddir}/include --with-export-libdir=${binddir}/lib > ${binddir}/configure.log)
+	@(cd ${bindsrcdir} && ./configure --disable-kqueue --disable-epoll --disable-devpoll --without-openssl --without-libxml2 --enable-exportlib --enable-threads=no --with-export-includedir=${binddir}/include --with-export-libdir=${binddir}/lib --with-gssapi=no > ${binddir}/configure.log)
 
 # Build the export libraries
 	@echo Building BIND Export libraries - this takes some time.
