Add the option "--no-pid" to the client, relay and server code, to disable writing a pid file.  Add the option "-pf pidfile" to the relay to allow the user to supply the pidfile name at runtime.  Add the "with-relay6-pid-file" option to configure to allow the user to supply the pidfile name for the relay in v6 mode at configure time. [ISC-Bugs #23351] [ISC-Bugs #17541]

--- a/configure.ac
+++ b/configure.ac
@@ -317,6 +317,12 @@ AC_ARG_WITH(relay-pid-file,
 		        (default is LOCALSTATEDIR/run/dhcrelay.pid)]),
 	AC_DEFINE_UNQUOTED([_PATH_DHCRELAY_PID], ["$withval"],
 			   [File for dhcrelay process information.]))
+AC_ARG_WITH(relay6-pid-file,
+	AC_HELP_STRING([--with-relay6-pid-file=PATH],
+		       [File for dhcrelay6 process information
+		        (default is LOCALSTATEDIR/run/dhcrelay6.pid)]),
+	AC_DEFINE_UNQUOTED([_PATH_DHCRELAY6_PID], ["$withval"],
+			   [File for dhcrelay6 process information.]))
 
 # Check basic types.
 AC_TYPE_INT8_T
