Correct some typos in the documentation - see [ISC-Bug #24803]

--- a/doc/examples/dhcpd-dhcpv6.conf
+++ b/doc/examples/dhcpd-dhcpv6.conf
@@ -68,9 +68,9 @@ host myclient {
 host otherclient {
         # This host entry is hopefully matched if the client supplies a DUID-LL
         # or DUID-LLT containing this MAC address.
-        hardware ethernet 01:00:80:a2:55:67:34;
+        hardware ethernet 01:00:80:a2:55:67;
 
-        fixed-address6 3ffe:501:ffff:100:4321;
+        fixed-address6 3ffe:501:ffff:100::4321;
 }
 
 # The subnet where the server is attached
