Add AM_MAINTAINER_MODE to configure.ac to avoid rebuilding configuration files.  [ISC-Bugs #24107]

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,13 @@ AC_INIT([DHCP], [4.2.2], [dhcp-users@isc.org])
 # like AUTHORS, COPYING, and such
 AM_INIT_AUTOMAKE([foreign])
 
+# we specify AM_MAINTAINER_MODE to avoid problems with rebuilding
+# the configure and makefiles.  Without it users doing things that
+# change the timestamps on the code, like checking it into a cvs
+# tree, could trigger a rebuild of the infrastructure files which
+# might fail if they don't have the correct tools.
+AM_MAINTAINER_MODE 
+
 # We want to turn on warnings if we are using gcc and the user did 
 # not specify CFLAGS. The autoconf check for the C compiler sets the
 # CFLAGS if gcc is used, so we will save it before we run that check.
