Existing server unittest migrated to ATF.

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,4 +1,10 @@
+SUBDIRS = .
+
 AM_CPPFLAGS = -I.. -DLOCALSTATEDIR='"@localstatedir@"'
+
+if HAVE_ATF
+  SUBDIRS += tests
+endif
 
 dist_sysconf_DATA = dhcpd.conf
 sbin_PROGRAMS = dhcpd
